Fix: text highlight and scrollbar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+/* #add9f4 - old blue */
 /* Custom component styles */
 @layer base {
   body {
@@ -16,15 +17,15 @@
 }
 
 [data-theme='winter'] .highlight:hover {
-  box-shadow: #add9f4 0px -1rem 0px inset;
+  box-shadow: #c7d2fe 0px -1.25rem 0px inset;
 }
 [data-theme='winter'] .highlight {
-  box-shadow: #add9f4 0px -0.5rem 0px inset;
+  box-shadow: #c7d2fe 0px -0.5rem 0px inset;
   transition: box-shadow 0.3s ease-out 0s;
 }
 
 .highlight:hover {
-  box-shadow: #463aa1 0px -1rem 0px inset;
+  box-shadow: #463aa1 0px -1.25rem 0px inset;
 }
 
 .highlight {
@@ -33,15 +34,15 @@
 }
 
 [data-theme='winter'] .highlight-heading:hover {
-  box-shadow: #add9f4 0px -4rem 0px inset;
+  box-shadow: #c7d2fe 0px -2.25rem 0px inset;
 }
 [data-theme='winter'] .highlight-heading {
-  box-shadow: #add9f4 0px -1rem 0px inset;
+  box-shadow: #c7d2fe 0px -1rem 0px inset;
   transition: box-shadow 0.3s ease-out 0s;
 }
 
 .highlight-heading:hover {
-  box-shadow: #463aa1 0px -4rem 0px inset;
+  box-shadow: #463aa1 0px -2.25rem 0px inset;
 }
 
 .highlight-heading {
